--- a/JavaTest/pom.xml
+++ b/JavaTest/pom.xml
@@ -25,6 +25,11 @@
             <scope>test</scope>
             <version>1.4.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+            <version>1.4.0.RELEASE</version>
+        </dependency>
 
         <!-- Database -->
         <dependency>
